# event_system

./: .gitignore  CMakeLists.txt  README.md  bonding_checker.h  conc_queue.h  env.h  env_obj.h  main.cpp  module.h  ports.h
.github/workflows/: ccpp.yml
ev_sys_lib/: conc_queue.h  env.h  module.h  ports.h
examples/highload_memory/: CMakeLists.txt  main.cpp
examples/kinda_system/: CMakeLists.txt  main.cpp
examples/listeners_senders/: CMakeLists.txt  main.cpp
include/: conc_queue.h  env.h  ev_sys.h  ports.h
include/utils/: finalizer.h
kinda_system/: CMakeLists.txt
